fixing dark mode bugs

--- a/src/components/appheader/AppHeader.module.scss
+++ b/src/components/appheader/AppHeader.module.scss
@@ -25,7 +25,7 @@
   flex-direction: row;
   align-items: center;
   gap: 1rem;
-  height: fit-content;
+  height: 20px;
 }
 
 .themeToggle {
@@ -40,6 +40,10 @@
 .themeIcon {
   font-size: 1.25rem;
   color: white;
+}
+
+.themeSVG {
+  border: none;
 }
 
 .zuubaDigital {
@@ -67,4 +71,20 @@
   .rightSection {
     gap: 0.5rem;
   }
+}
+
+.darkMode {
+  width: 20px;
+  height: 20px;
+  background-image: url("moon.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.lightMode {
+  width: 20px;
+  height: 20px;
+  background-image: url("sun.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 }
