--- a/src/components/nextbutton/nextbutton.module.scss
+++ b/src/components/nextbutton/nextbutton.module.scss
@@ -6,3 +6,10 @@
   margin-top: 3rem;
   gap: 1rem;
 }
+
+.linkStyle {
+  color: var(--color-link);
+  font-weight: 200;
+  text-decoration: none;
+  border-bottom: 1px solid var(--color-link);
+}
