--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@
 
 /* Dark Mode Variables */
 [data-theme="dark"] {
-  --color-brand-secondary: rgb(180, 130, 200);
+  --color-brand-secondary: rgb(235, 209, 245);
 
   --color-bg-primary: #1a1a2e;
   --color-bg-secondary: #16213e;
@@ -71,7 +71,7 @@ body {
 
 h1 {
   font-family: "Shrikhand", serif;
-  font-size: 5rem;
+  font-size: 3rem;
   margin: 1rem 0;
   line-height: 4rem;
   color: var(--color-brand-secondary);
@@ -81,7 +81,7 @@ h1 {
 h2 {
   font-size: 2rem;
   font-weight: 400;
-  margin: 3rem 0 0.5rem;
+  margin: 1rem 0 0.5rem;
 }
 
 h3 {
@@ -140,6 +140,8 @@ svg {
   margin-bottom: 1.5rem;
   width: 100%;
   max-width: 500px;
+  background: var(--color-bg-primary);
+  border-radius: 10px;
 }
 
 svg text {
